--- a/src/less/blocks/_city-selection.less
+++ b/src/less/blocks/_city-selection.less
@@ -9,10 +9,10 @@
 	
 	@media (min-width: 784px) {
 		width: 360px;
-		top:37px;
+		// top:37px;
 		
 	}
-	@media (min-width: 1154px){
+	@media (min-width: 1152px){
 		position: absolute;
 		left:auto;
 		top:auto;
@@ -23,6 +23,13 @@
 	} 
 
 }
+
+// Позиционируем второй блок с городами на странице Заказ в самом верху
+// #order-city-selector.city-selection-wrapper {
+// 	@media (min-width: 784px) {top:0px;}
+// 	@media (min-width: 1154px){top:auto;}
+// }
+
 .selection-block-head{	
 	position: sticky;
 	left: 0;
