--- a/src/less/sections/_header-top.less
+++ b/src/less/sections/_header-top.less
@@ -8,6 +8,8 @@
 }
 
 .header-info__block {
+	white-space: nowrap;
+
 	img {
 		margin-right: 6px;
 	}
@@ -19,7 +21,7 @@
 	.menu-icon {
 		.icon-mixin(@white, -20px, 6px);
 	}
-}
+} 
 
 // блок лого, регистрация, корзина и тд
 .header-menu {
@@ -138,11 +140,6 @@
 			display: block;
 		}
 	}
-	
-	.menu-icon {
-		.icon-mixin(@textMenu, -12px, 10px);
-	}
-
 }
 
 // Класс для пустой шапки без навигации и корзины
