--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -5,7 +5,7 @@
 			.col-6.col-lg-4.d-flex
 				.header-info__block.d-flex
 					img(src="../img/icons/marker.svg" alt="иконка")
-					a.city-toggle(href="#").menu-icon
+					a.city-toggle(href="#" data-city-selector='#header-city-selector').menu-icon
 						span Санкт-Петербург
 			.col-lg-4.d-none.d-lg-flex
 				+header-info__item("../img/icons/car.svg", "Доставка по всей России")(class="mr-20")
@@ -13,7 +13,8 @@
 			.col-6.col-lg-4.d-flex.justify-content-end
 				+header-info__item("../img/icons/phone.svg", "+7 (495) 132-62-60")
 				.header-info__block.d-none.d-md-block.ml-10 +7 (800) 222-63-30
-
+		
+		- var cityBlockId = 'header-city-selector';
 		include ../sections/_city-selection.pug
 
 .header-menu
@@ -37,4 +38,4 @@
 					.cart__image
 						img(src="../img/icons/bag-color.svg" alt="иконка")
 						.cart__image-total 3
-					.cart__amount.menu-icon 5850р.
+					.cart__amount 5850р.
