--- a/src/less/blocks/_goods-cart.less
+++ b/src/less/blocks/_goods-cart.less
@@ -10,16 +10,26 @@
 	border-bottom: 1px solid @gray;
 	margin-bottom: 14px;
 	justify-content: space-between;
+	@media @tablet {
+		width: 422px;
+	}
 }
 .goods-cart__img {
 	float: left;
 	width: 50px;
 	height: 50px;
 	margin-right: 13px;
+	@media @tablet {
+		width: 80px;
+		height: 80px;
+	}
 }
 .goods-cart__info {
 	float: left;
 	padding-bottom: 14px;
+	@media @tablet {
+		padding-bottom: 20px;
+	}
 }
 .goods-cart__title-icon {
 	display: flex;
@@ -29,6 +39,10 @@
 	justify-content: space-between;
 	align-items: center;
 	padding-right: 8px;
+	@media @tablet {
+		padding-left: 8px;
+		padding-right: 0;
+	}
 }
 .goods-cart__description {
 	width: 198px;	
@@ -38,20 +52,35 @@
 	color: @text-light-grey;
 	padding-bottom: 20px;
 	padding-right: 17px;
+	@media @tablet {
+		font-size: 16px;
+		width: 274px;
+	}
 }
 .goods-cart__price {
 	line-height: 1;
 	font-size: 14px;
 	color: @text-light-grey;
+	@media @tablet {
+		font-size: 20px;
+	}
 }
 .goods-cart__count {
 	font-size: 14px;
 	width: 28px!important;
+	@media @tablet {
+		font-size: 24px;
+		width: 39px!important;
+	}
 }
 .goods-cart__counter-minus, .goods-cart__counter-plus {
 	width: 22px;
 	height: 22px;
 	background-size: 14px;
+	@media @tablet {
+		width: 36px;
+		height: 36px;
+	}
 }
 .close-icon {
 	color: @text-light-grey;
@@ -60,4 +89,8 @@
 	height: 12px;
 	cursor: pointer;
 	margin-left: 16px;
+	@media @tablet {
+		margin-left: 43px;
+    	margin-top: 12px;
+	}
 }
