--- a/src/pug/pages/ui/products-table.pug
+++ b/src/pug/pages/ui/products-table.pug
@@ -10,18 +10,18 @@ block content
 		.title Таблица продуктов
 		.products-table-wrapper
 			.products-table
-				.products-table-header
-					.products-table-header_item Дата
-					.products-table-header_item № заказа
-					.products-table-header_item Сумма
-					.products-table-header_item Статус заказа
-					.products-table-header_item Подробнее
-				
-				+products-table-row('31.08.18', '5645', '12 380р.')
-					+badgeOrderStatus('Выполнен', 'badge-done')
-				+products-table-row('31.08.18', '5645', '12 380р.')(class="products-table-row--open")
-					+badgeOrderStatus('Принят', 'badge-done')
-				.ordered
+				+products-table-row('Дата', '№ заказа', 'Сумма', 'Статус заказа')(class="products-table-row--header")
+			
+			.products-table-group
+				.products-table
+					+products-table-row('31.08.18', '5645', '12 380р.', '')
+						+badgeOrderStatus('Выполнен', 'badge-done')
+			
+			.products-table-group
+				.products-table
+					+products-table-row('31.08.18', '5645', '12 380р.', '')(class="products-table-row--open")
+						+badgeOrderStatus('Принят', 'badge-done')
+				.ordered.ordered--products-table
 					.thanks-header
 						.thanks-header__title.thanks-header__title--left Содержимое заказа
 					.ordered-wrapper
@@ -29,10 +29,7 @@ block content
 							+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-1.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )
 							+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-2.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )
 							+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-1.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )
-
-						//- .ordered-item.ordered-promo
-						//- 	+inputField('Введите промо-код', '', 'notCheck', 'text')
-						//- 	+button-apply('Применить', '#')
+						
 						.ordered-calc
 							.ordered-calc__item
 								span.ordered-calc-text Стоимость
@@ -46,3 +43,20 @@ block content
 							.ordered-calc__item.ordered-calc__item--bold
 								span.ordered-calc-text Всего к оплате
 								span.ordered-calc-price 14 229р.
+						.thanks-header
+							.thanks-header__title.thanks-header__title--left Параметры отправки и доставки
+							.ordered-calc.ordered-footer
+								.ordered-calc__item
+									span.ordered-calc-text Платежная система
+									span.ordered-calc-price Яндекс-касса
+								.ordered-calc__item
+									span.ordered-calc-text Оплачен
+									span.ordered-calc-price Да (от #[span 31.08.18])
+								.ordered-calc__item
+									span.ordered-calc-text Служба доставки
+									span.ordered-calc-price Постаматы Pickpoint по всей России
+			
+			.products-table-group
+				.products-table
+					+products-table-row('31.08.18', '5645', '12 380р.', '')
+						+badgeOrderStatus('Отменен', 'badge-red')
