--- a/src/pug/mixins/_products-table.pug
+++ b/src/pug/mixins/_products-table.pug
@@ -1,9 +1,9 @@
-mixin products-table-row(date, price, summe)
+mixin products-table-row(date, price, summe, notes)
 	
 	.products-table-row&attributes(attributes)
 		.products-table-row__cell #{date}
 		.products-table-row__cell #{price}
 		.products-table-row__cell #{summe}
-		.products-table-row__cell
+		.products-table-row__cell #{notes}
 			block
 		.products-table-row__cell.products-table-row__cell--link Подробнее
