--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,15 +14,20 @@ block content
 					+button("Перейти", "ui/ui-kit.html")
 			
 		.row
-			.col.mb-30
+			.col-md-4.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Главная страница
 					+button("Перейти", "main.html")
-			.col
+			.col-md-4.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Каталог товаров
 					+button("Перейти", "catalog.html")
-			.col
+			.col-md-4.mb-30
 				.card.align-items-center.pb-35
 					.title-2 Описание товара
 					+button("Перейти", "product.html")
+		.row
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Оформить заказ
+					+button("Перейти", "order.html")
