--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -76,7 +76,9 @@
 			+linkLeftPanel("Главная", "../main.html")
 			+linkLeftPanel("Каталог", "../catalog.html")
 			+linkLeftPanel("Описание товара", "../product.html")
-			//- +linkLeftPanel("Каталог", "../catalog.html")
+			+linkLeftPanel("Страница 404", "../page404.html")
+
+			
 
 
 #ui-nav-toggle Скрыть/Показать навигацию
