edit textarea border and input promo

--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -157,9 +157,12 @@
 		width: 100%;
 		height: 88px;
 		font-size: 14px;
-		color:@textMenu;	
+		color:@textMenu;
+		outline: none;
+		padding: 16px;
 	}
 }
+.comments-field:focus{border-color:@textMenu;}
 .form-group-user-address{
 	display: none;
 	margin-right: -4px;
