--- a/src/pug/sections/contacts-info.pug
+++ b/src/pug/sections/contacts-info.pug
@@ -53,7 +53,7 @@
 				.icon-comments.icon-comments--plus
 				a.contacts-link.delivery-comments--link(href="#") Добавить комментарий
 				.comments-field
-					textarea(name="comments-field" )
+					textarea.comments-field(name="comments-field" )
 		
 		.contacts-block
 			.title-4.contacts-title Способ оплаты
