--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -55,7 +55,7 @@ mixin goodsCart (img, text, price)
 		.goods-cart__info
 			.goods-cart__title-icon
 				.goods-cart__description= text
-				.close-icon
+				.goods-cart__close-icon
 			.goods-cart__counter-price
 				.product-counter.goods-cart__counter
 					.btn-counter.btn-counter--minus.goods-cart__counter-minus
