--- a/src/pug/pages/ui/goods-cart.pug
+++ b/src/pug/pages/ui/goods-cart.pug
@@ -6,8 +6,8 @@ block variables
 
 block content
 	.container.container--left
-		
 		.title Товары в корзине
-		+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
-		+goodsCart ('thumb_blue-purse-2.png', 'Кошелек большой с двумя молниями', '4 893 р.')
-		+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		.goods-cart
+			+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+			+goodsCart ('thumb_blue-purse-2.png', 'Кошелек большой с двумя молниями', '4 893 р.')
+			+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
