--- a/src/less/blocks/_sections.less
+++ b/src/less/blocks/_sections.less
@@ -68,3 +68,13 @@
 	@media @desktop {padding-bottom: 74px;}
 	@media @desktopXL {padding-bottom: 146px;}
 }
+
+.section-order-processed {
+	margin-left: auto;
+	margin-right: auto;
+	.mixin-margin(top, @l3);
+	
+	@media @tablet {width: 444px; margin-bottom: 32px;}
+	@media @desktop {width: 704px; margin-bottom: 124px;}
+	@media @desktopXL {width: 685px;margin-bottom: 116px;}	
+}
