account-profile page completed

--- a/src/less/blocks/_bread-crumb.less
+++ b/src/less/blocks/_bread-crumb.less
@@ -1,9 +1,9 @@
 .breadcrumb-list{
-	display: none;
+	// display: none;
 	width: 100%;
-	@media @tablet {
-		display: block;
-	}
+	// @media @tablet {
+	// 	display: block;
+	// }
 }
 .breadcrumb-item {
 	display: inline-block;
