--- a/src/less/blocks/_vertical-navigation.less
+++ b/src/less/blocks/_vertical-navigation.less
@@ -2,8 +2,8 @@
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	margin-left: 16px;
-	margin-right: 16px;
+	// margin-left: 16px;
+	// margin-right: 16px;
 }
 .cabinet-menu-item{
 	margin: 0;
