--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -81,6 +81,7 @@
 			+linkLeftPanel("Каталог", "../catalog.html")
 			+linkLeftPanel("Описание товара", "../product.html")
 			+linkLeftPanel("Заказ", "../order.html")
+			+linkLeftPanel("Профиль пользователя", "../account-profile.html")
 			//- +linkLeftPanel("Каталог", "../catalog.html")
 
 
