--- a/src/pug/sections/_contacts-profile.pug
+++ b/src/pug/sections/_contacts-profile.pug
@@ -12,8 +12,9 @@
 			.title-4.contacts-title.contacts-title--profile Адрес доставки
 			.subtitle-block
 				.contacts-text.contacts-address Санкт-Петербург
-				a.contacts-link.select-address.city-toggle(href="#") Выбрать город
-				include ../../sections/_city-selection.pug				
+				a.contacts-link.select-address.city-toggle(href="#" data-city-selector="#profile-city-selector") Выбрать город
+				- var cityBlockId = 'profile-city-selector';
+				include _city-selection.pug				
 			
 			.form-group-user-address.d-block
 				.row
