--- a/src/less/blocks/_products-table.less
+++ b/src/less/blocks/_products-table.less
@@ -88,10 +88,15 @@
 .ordered-footer{
 	padding-bottom: 0;
 	border-top: 1px solid @color-line;
-	font-size: 16px;
+	
 	@media @desktop{
 		padding-top: 30px;		
 		font-size: 20px;}
+}
+.ordered-calc--table .ordered-calc__item,
+.ordered-footer .ordered-calc__item{	
+	font-size: 14px;
+	@media @desktop{font-size: 16px;}
 }
 .ordered--products-table{
 	//display: none;
