--- a/src/pug/pages/ui/products-table.pug
+++ b/src/pug/pages/ui/products-table.pug
@@ -30,7 +30,7 @@ block content
 							+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-1.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )(class="ordered-goods-item--special")
 							+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-2.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )(class="ordered-goods-item--special")
 							+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-1.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )(class="ordered-goods-item--special")
-						.ordered-calc
+						.ordered-calc.ordered-calc--table
 							.ordered-calc__item
 								span.ordered-calc-text Стоимость
 								span.ordered-calc-price 14 679р.
