--- a/src/less/blocks/_products-table.less
+++ b/src/less/blocks/_products-table.less
@@ -70,6 +70,7 @@
 	padding-bottom: 16px;
 	border-left: 0px;
 	border-right: 0px;
+	border-top:0px;
 	background-color: @order-item-bg;
 	@media @desktop {padding-bottom: 35px;}
 }
@@ -78,7 +79,7 @@
 	text-align: left;
 	padding-top: 16px;
 	padding-bottom: 16px;
-	border-bottom:1px solid @color-line; ;
+	//border-bottom:1px solid @color-line; ;
 	@media @desktop {
 		padding-top: 24px;
 		padding-bottom: 24px;
