--- a/src/less/blocks/_vertical-navigation.less
+++ b/src/less/blocks/_vertical-navigation.less
@@ -9,7 +9,17 @@
 	margin: 0;
 	padding: 0;
 	border-bottom: 1px solid @color-line;
+
+	&:first-child {
+		border-top: 1px solid @color-line;
+		
+		@media @tablet {
+			border-top:none;
+		}
+
+	}
 }
+
 .cabinet-menu-item__link{
 	display: block;
 	text-transform: uppercase;
