--- a/src/less/blocks/_bread-crumb.less
+++ b/src/less/blocks/_bread-crumb.less
@@ -1,9 +1,18 @@
 .breadcrumb-list{
-	// display: none;
 	width: 100%;
-	// @media @tablet {
-	// 	display: block;
-	// }
+	
+	padding-left: 4px;
+	padding-right: 4px;
+	
+	@media @tablet {
+		padding-left: 8px;
+		padding-right: 8px;
+	}
+
+	@media @desktopXL {
+		padding-left: 12px;
+		padding-right: 12px;
+	}
 }
 .breadcrumb-item {
 	display: inline-block;
