--- a/src/pug/pages/account-profile.pug
+++ b/src/pug/pages/account-profile.pug
@@ -9,7 +9,7 @@ block content
 	//- Хлебные крошки
 	.section-breadcrumb
 		.container
-			.breadcrumb-list.col
+			.breadcrumb-list
 				+breadcrumb-item('#', 'Главная страница')
 				+breadcrumb-item('#', 'Личный кабинет')
 				+breadcrumb-item('#', 'Профиль')
@@ -22,8 +22,8 @@ block content
 				.col-md-3.col-lg-3.offset-xl-1.col-xl-2.col--no-padding
 					.account__navigation
 						ul.cabinet-menu
-							+cabinet-menu-item('#', 'профиль')
-							+cabinet-menu-item('#', 'мои заказы')(class="cabinet-menu-item__link--active")
+							+cabinet-menu-item('#', 'профиль')(class="cabinet-menu-item__link--active")
+							+cabinet-menu-item('#', 'мои заказы')
 							+cabinet-menu-item('#', 'корзина')
 							+cabinet-menu-item('#', 'избранное')
 							+cabinet-menu-item('#', 'выйти')
