account-favourite page completed

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -63,6 +63,7 @@
 @import "pages/catalog";
 @import "pages/order";
 @import "pages/product";
+@import "pages/account-favourite";
 
 // Utils - Always Last - !IMPORTANT
 @import "utils/_margins";
