--- a/src/less/blocks/_sections.less
+++ b/src/less/blocks/_sections.less
@@ -78,3 +78,11 @@
 	@media @desktop {width: 704px; margin-bottom: 124px;}
 	@media @desktopXL {width: 685px;margin-bottom: 116px;}	
 }
+
+.section-favourite {
+	padding-bottom: 22px;
+
+	@media @tablet {padding-bottom: 36px;}
+	@media @desktop {padding-bottom: 112px;}
+	@media @desktopXL {padding-bottom: 78px;}	
+}
