--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -82,6 +82,7 @@
 			+linkLeftPanel("Описание товара", "../product.html")
 			+linkLeftPanel("Заказ", "../order.html")
 			+linkLeftPanel("Спасибо за заказ", "../order-processed.html")
+			+linkLeftPanel("Избранное", "../account-favourite.html")
 			//- +linkLeftPanel("Каталог", "../catalog.html")
 
 
