--- a/src/less/pages/account-profile.less
+++ b/src/less/pages/account-profile.less
@@ -1,9 +1,12 @@
 .profile__title {
-	display: none;
 	text-align: center;
+	margin-bottom: 0;
+	margin-top: 32px;
 
 	@media @tablet {
 		display: block;
+		margin-bottom: 22px;
+		margin-top: 0;
 	}
 	
 	@media @desktop {
