--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -9,13 +9,13 @@
 	@media @tablet{
 		padding-right: 20px;
 		padding-left: 20px;
-		padding-top: 16px;}
+		padding-top: 8px;}
 	@media @desktop{
 		font-size: 16px;
-		padding-top: 18px;}
+		}
 	@media @desktopXL{
 		font-size: 18px;
-		padding-top: 34px;}
+		}
 	
 }
 .contacts-block{
