--- a/src/pug/pages/account-profile.pug
+++ b/src/pug/pages/account-profile.pug
@@ -16,7 +16,7 @@ block content
 
 	//- Описание товара
 	.section-profile
-		.profile__title.title-1 ПРОФИЛЬ
+		//- .profile__title.title-1 ПРОФИЛЬ
 		.container
 			.row
 				.col-md-3.col-lg-3.offset-xl-1.col-xl-2.col--no-padding
@@ -27,5 +27,8 @@ block content
 							+cabinet-menu-item('#', 'корзина')
 							+cabinet-menu-item('#', 'избранное')
 							+cabinet-menu-item('#', 'выйти')
+				.col-12.order-md-first
+					.profile__title.title-1 ПРОФИЛЬ
+				
 				.offset-md-2.col-md-6.offset-lg-1.col-lg-4.offset-xl-1.col-xl-4
 					include ../sections/_contacts-profile.pug
