index page updated

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -31,3 +31,16 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Оформить заказ
 					+button("Перейти", "order.html")
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Спасибо за заказ
+					+button("Перейти", "order-processed.html")
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Профиль пользователя
+					+button("Перейти", "account-profile.html")
+		.row
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Избранное
+					+button("Перейти", "account-favourite.html")
