--- a/src/less/blocks/_buttons.less
+++ b/src/less/blocks/_buttons.less
@@ -246,7 +246,7 @@
 .button-order-block {
 	background-color: @btn-green;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	padding-top: 16px;
 	padding-bottom: 16px;
 	padding-left: 13px;
@@ -269,6 +269,8 @@
 
 .button-order__text {
 	text-transform: uppercase;
+	float: left;
+	margin-right: 8px;
 }
 
 .button-apply {
