--- a/src/less/blocks/_goods-cart.less
+++ b/src/less/blocks/_goods-cart.less
@@ -1,7 +1,8 @@
 .goods-cart {
-	width: 295px;
+	// height: 100%;
+	width: 321px;
 	@media @tablet {
-		width: 422px;
+		width: 460px;
 	}
 }
 .clearfix{
@@ -14,8 +15,11 @@
 .goods-cart-wrapper {
 	width: 100%;
 	border-bottom: 1px solid @gray;
-	margin-bottom: 14px;
 	justify-content: space-between;
+	padding-left: 8px;
+	&:not(:last-child) {
+		margin-bottom: 14px;
+	}
 }
 .goods-cart__img {
 	float: left;
@@ -42,13 +46,14 @@
 	justify-content: space-between;
 	align-items: center;
 	padding-right: 8px;
+	margin-top: -5px;
 	@media @tablet {
 		padding-left: 8px;
 		padding-right: 0;
 	}
 }
 .goods-cart__description {
-	width: 198px;	
+	width: 190px;	
 	line-height: 1;
 	font-size: 12px;
 	letter-spacing: 0.04em;
@@ -57,7 +62,7 @@
 	padding-right: 17px;
 	@media @tablet {
 		font-size: 16px;
-		width: 274px;
+		width: 265px;
 	}
 }
 .goods-cart__price {
@@ -91,7 +96,7 @@
 	width: 12px;
 	height: 12px;
 	cursor: pointer;
-	margin-left: 16px;
+	margin-left: 34px;
 	@media @tablet {
 		margin-left: 43px;
     	margin-top: 12px;
