--- a/src/pug/pages/ui/goods-cart.pug
+++ b/src/pug/pages/ui/goods-cart.pug
@@ -11,3 +11,8 @@ block content
 			+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
 			+goodsCart ('thumb_blue-purse-2.png', 'Кошелек большой с двумя молниями', '4 893 р.')
 			+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+	pre.
+		.goods-cart
+			+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+			+goodsCart ('thumb_blue-purse-2.png', 'Кошелек большой с двумя молниями', '4 893 р.')
+			+goodsCart ('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
