--- a/src/pug/pages/ui/header-top.pug
+++ b/src/pug/pages/ui/header-top.pug
@@ -24,7 +24,7 @@ block content
 						.col-6.col-lg-4.d-flex.justify-content-end
 							+header-info__item("../../img/icons/phone.svg", "+7 (495) 132-62-60")
 							.header-info__block.d-none.d-md-block.ml-10 +7 (800) 222-63-30
-
+					include ../goods-cart-page.pug
 			.header-menu
 				.container
 					a(href="#").logo
@@ -38,7 +38,7 @@ block content
 							.menu-block.user-registration
 								img(src="../../img/icons/profile.svg" alt="иконка")
 								.user-registration__text
-									a(href="#!") Вход 
+									a(href="#!") Вход
 									| или 
 									a(href="#!") Регистрация |
 							.menu-block.cart
