--- a/src/pug/sections/header-top.pug
+++ b/src/pug/sections/header-top.pug
@@ -16,6 +16,7 @@
 		
 		- var cityBlockId = 'header-city-selector';
 		include ../sections/_city-selection.pug
+		include ../pages/goods-cart-page.pug
 
 .header-menu
 	.container
