--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -56,6 +56,7 @@
 			+linkLeftPanel("Аккордеон", "ui-accordeon.html")
 			+linkLeftPanel("Выпадающий список", "drop-down.html")
 			+linkLeftPanel("Товары в корзине", "goods-cart.html")
+			+linkLeftPanel("Корзина с товаром", "goods-cart-page.html")
 
 
 	.left-panel__section
@@ -83,6 +84,7 @@
 			+linkLeftPanel("Описание товара", "../product.html")
 			+linkLeftPanel("Заказ", "../order.html")
 			+linkLeftPanel("Спасибо за заказ", "../order-processed.html")
+
 			//- +linkLeftPanel("Каталог", "../catalog.html")
 
 
