--- a/src/less/main.less
+++ b/src/less/main.less
@@ -43,6 +43,7 @@
 @import "blocks/_goods-cart.less";
 @import "blocks/_profile-contacts.less";
 @import "blocks/_contacts-for-profile.less";
+@import "blocks/_goods-cart-page.less";
 
 
 // Sections
