add modificator for beige

--- a/src/less/blocks/_products-table.less
+++ b/src/less/blocks/_products-table.less
@@ -38,12 +38,14 @@
 	@media @desktop{font-size: 18px;}
 }
 
-.products-table-row .badge-order-status{
+.badge-order-status--small{
+	padding-top: 7px;
+	padding-bottom: 6px;
 	padding-right: 9px;
 	padding-left: 9px;
 	@media @tablet{
-		padding-right: 16px;
-		padding-left: 16px;
+		padding-right: 10px;
+		padding-left: 10px;
 	}
 }
 .products-table-row--open{
