--- a/src/less/blocks/_goods-cart-page.less
+++ b/src/less/blocks/_goods-cart-page.less
@@ -32,7 +32,6 @@
 }
 .goods-cart__color-line {
 	 white-space: nowrap;
-	 padding-bottom: 16px;
 }
 [class^="cart-line-color"] {
 	height: 4px;
@@ -59,8 +58,12 @@
 }
 .goods-cart__footer {
 	position: absolute;
-	bottom: 0;
+	bottom: 12px;
 	width: 100%;
+	height: 88px;
+	@media @tablet {
+		bottom: 14px;
+	}
 }
 .goods-cart__button {
 
@@ -69,7 +72,7 @@
 	text-align: center;
 	padding-top: 13px;
 	padding-bottom: 11px;
-
+	margin-bottom: 11px;
 }
 .goods-cart__back-link-item {
 	line-height: normal;
