--- a/src/less/blocks/_goods-cart.less
+++ b/src/less/blocks/_goods-cart.less
@@ -1,6 +1,9 @@
 .goods-cart {
-	// height: 100%;
+	max-height: 80%;
+	overflow-y: scroll;
 	width: 321px;
+	margin-bottom: 88px;
+	padding-top: 16px;
 	@media @tablet {
 		width: 460px;
 	}
@@ -17,9 +20,7 @@
 	border-bottom: 1px solid @gray;
 	justify-content: space-between;
 	padding-left: 8px;
-	&:not(:last-child) {
-		margin-bottom: 14px;
-	}
+	margin-bottom: 14px;
 }
 .goods-cart__img {
 	float: left;
