--- a/src/pug/pages/goods-cart-page.pug
+++ b/src/pug/pages/goods-cart-page.pug
@@ -14,9 +14,16 @@ include ../layouts/_mixins-links.pug
 		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
 		+goodsCart('thumb_blue-purse-2.png', 'Кошелек большой с двумя молниями', '4 893 р.')
 		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
+		+goodsCart('thumb_blue-purse-1.png', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893 р.')
 	.goods-cart__footer
 		.goods-cart__button
-			a.button-order__link(href='#')
-			+button-order('Оформить заказ', '#', '14 679')
+			a.button-order__link(href='')
+			+button-order('Оформить заказ', 'order-processed.html', '14 679')
 		.goods-cart__back-link
 			a.goods-cart__back-link-item(href='catalog.html') Вернуться в каталог
